Named Entity Recognition with Transformer Network

--- a/Transformer_application_Named_Entity_Recognition.ipynb
+++ b/Transformer_application_Named_Entity_Recognition.ipynb
@@ -4,14 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Transformer Network Application: Named-Entity Recognition\n",
-    "\n",
-    "Welcome to Week 4's second ungraded lab. In this notebook you'll explore one application of the transformer architecture that you built in the previous assignment.\n",
-    "\n",
-    "**After this assignment you'll be able to**:\n",
-    "\n",
-    "* Use tokenizers and pre-trained models from the HuggingFace Library.\n",
-    "* Fine-tune a pre-trained transformer model for Named-Entity Recognition"
+    "# Transformer Network Application: Named-Entity Recognition"
    ]
   },
   {
